# Kinesio-Track

backend/: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_sessions_and_media.py  0003_timescale_hypertables.py  0004_clinician_tables.py  0005_red_flags_and_tokens.py
backend/app/: main.py
backend/app/ai/: __init__.py  claude_client.py  cost_tracker.py  response_parser.py
backend/app/ai/prompt_templates/: __init__.py  adapt_plan.py  base.py  feedback.py  initial_plan.py  red_flag.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  clinicians.py  intake.py  media.py  patients.py  plans.py  progress.py  sessions.py
backend/app/api/ws/: __init__.py  connection_manager.py  session_ws.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  postgres.py  redis.py  s3.py  timescale.py
backend/app/db/queries/: __init__.py  analytics.py  progress.py
backend/app/models/: __init__.py  base.py  clinician.py  exercise.py  feedback_event.py  injury.py  media.py  patient.py  phase.py  plan.py  red_flag.py  session.py  token_usage.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  intake.py  media.py  patient.py  plan.py  progress.py  session.py  websocket.py
backend/app/services/: __init__.py  exercise_planner.py  feedback_generator.py  notification.py  plan_adapter.py  pose_analyzer.py  recovery_forecaster.py  red_flag_monitor.py  session_manager.py  session_scorer.py  video_intake_analyzer.py
backend/app/workers/: __init__.py  analytics_tasks.py  beat_schedule.py  celery_app.py  cleanup_tasks.py  notification_tasks.py  plan_tasks.py  session_tasks.py  video_tasks.py
backend/docker/: Dockerfile.api  Dockerfile.worker  nginx.conf
backend/mediapipe/: __init__.py  joint_angles.py  pose_estimator.py  video_processor.py
backend/pose_engine/: __init__.py  joint_angles.py  pose_estimator.py  video_processor.py
backend/scripts/: backfill_timescale.py  check_claude_costs.py  check_env.py  download_models.sh  seed_dev_data.py
backend/tests/: conftest.py
backend/tests/e2e/: test_ankle_sprain_journey.py  test_red_flag_escalation.py
backend/tests/fixtures/: mock_claude_responses.py  sample_landmarks.json
backend/tests/integration/: test_auth.py  test_intake_flow.py  test_session_flow.py  test_websocket.py
backend/tests/unit/: test_feedback_generator.py  test_joint_angles.py  test_plan_adapter.py  test_pose_analyzer.py  test_recovery_forecaster.py  test_response_parser.py
backend/tests/unit/integration/: test_progress_api.py
