# =============================================================================
# Kinesio-Track — Project Configuration
# =============================================================================

[project]
name            = "kinesio-track-backend"
version         = "1.0.0"
description     = "Remote physiotherapy agent — AI-powered exercise plans and real-time pose feedback"
requires-python = ">=3.11"
readme          = "README.md"

# =============================================================================
# Ruff — linter + formatter
# =============================================================================

[tool.ruff]
target-version = "py314"
line-length    = 100
src            = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI Depends)
    "N805",   # first argument of a method should be named 'self' (Pydantic validators)
    "RUF012", # mutable class attributes (SQLAlchemy columns)
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"__init__.py"          = ["F401"]
# Allow assert statements in tests
"tests/**"             = ["S101", "N802", "N803"]
# Allow longer lines in migration files
"alembic/versions/**"  = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy — type checker
# =============================================================================

[tool.mypy]
python_version         = "3.14"
strict                 = false
warn_return_any        = true
warn_unused_ignores    = true
warn_redundant_casts   = true
disallow_untyped_defs  = true
ignore_missing_imports = true
exclude                = [
    "alembic/",
    "scripts/",
]

[[tool.mypy.overrides]]
# Third-party libs without stubs — suppress missing-import errors
module = [
    "mediapipe.*",
    "celery.*",
    "anthropic.*",
    "jose.*",
    "passlib.*",
    "structlog.*",
    "jsonpatch.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode     = "auto"           # all async tests run without @pytest.mark.asyncio
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts          = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: fast isolated tests — no DB, no network",
    "integration: tests that touch a real DB (test schema, per-test rollback)",
    "e2e: full-stack tests against a live test environment",
    "slow: tests that take > 5 seconds",
]
filterwarnings = [
    "error",
    # SQLAlchemy 2.x compatibility warning in some async patterns
    "ignore::DeprecationWarning:sqlalchemy",
    # asyncpg internals
    "ignore::DeprecationWarning:asyncpg",
    # Pydantic v2 migration warnings from third-party libs
    "ignore::PydanticDeprecatedSince20",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source   = ["app"]
omit     = [
    "app/models/*",          # ORM models are tested indirectly via migrations
    "app/db/timescale.py",   # raw asyncpg — tested via integration tests
    "scripts/*",
    "alembic/*",
]
branch   = true

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 60            # raise CI failure below 60% coverage
exclude_lines  = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",               # abstract method bodies
]